# ftag

./: .clang-format  .gitignore  CMakeLists.txt  README.md  \  build.sh  main.cpp  run.sh
include/: database.hpp
include/ftag/: TagClass.hpp  abort.hpp  argumentParser.hpp  argumentParserWrapper.hpp  database.hpp  database_interface.hpp  database_statement.hpp  file.hpp  file_importer.hpp  import.hpp  search.hpp  sqlite3_cpp_helpers.hpp  sync.hpp  sync_and_track.hpp  tag.hpp  tag_data.hpp
src/: DatabaseClass.cpp  DatabaseClass.h  argumentParser.cpp  argumentParserWrapper.cpp  database.cpp  database_interface.cpp  database_statement.cpp  file.cpp  file_importer.cpp  import.cpp  main.cpp  search.cpp  sync.cpp  sync_and_track.cpp  tag.cpp
